# llm-style-terrain

./: .gitignore  AGENTS.md  CVAE 训练完成总结.md
python-src/: .gitignore  CVAE训练完成总结.md  README.md  README_CVAE_512.md  README_CVAE_TRAINING.md  controlnet_demo.py  example_conditions.csv  gamelandscape_demo.py  gamelandscape_model_comparison.py  generate.py  heightmapstyle_demo.py  infer_unetcvae.py  main.py  mapgen_demo.py  migrate_outputs.py  pyproject.toml  reconstruct.py  test.py  test_gen.py  tools.py  train_cvae.py  train_cvae_512.py  train_unetcvae.py  训练优化说明.md
python-src/examples/: controlnet_demo.py  controlnet_simple.py
python-src/src/: __init__.py  config.py
python-src/src/dataprocess/: __init__.py  extract_features.py  preprocess.py  visualize_features.py
python-src/src/dataprocess_512/: README.md  __init__.py  extract_features.py  preprocess.py  visualize_features.py
python-src/src/diffusion/: CONTROLNET_README.md  __init__.py  sdxl_inference.py
python-src/src/gamelandscape/: FIX_SUMMARY.md  LORA_INFO.md  QUICKSTART.md  TEXT_TO_IMAGE.md
python-src/src/generators/: __init__.py  perlin.py
python-src/src/heightmapstyle/: __init__.py  model_loader.py
python-src/src/inference/: README.md  __init__.py  generator.py
python-src/src/mapgen/: __init__.py  bbddm_scheduler.py  height_mapgen.py  layout_mapgen.py
python-src/src/train_cvae/: config.py  dataset.py  model.py  trainer.py  visualizer.py
python-src/src/train_unetcvae/: __init__.py  blocks.py  config.py  dataset.py  visualizer.py
python-src/tools/: README.md  __init__.py  png2raw.py
(+50 files in other folders)
